<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_venda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdminActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left" >

                <ImageView
                    android:id="@+id/imageAvatar"
                    android:layout_width="64dp"
                    android:layout_height="59dp"
                    android:src="@drawable/feminino" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bemVindoLogado" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCadastroUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastroUsuario" />

            <Button
                android:id="@+id/btnListarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listarUsuario" />

            <Button
                android:id="@+id/btnCadastroProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastroProdutos" />

            <Button
                android:id="@+id/btnPerfilAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meuPerfil" />

            <Button
                android:id="@+id/btnSair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sair" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>