<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_venda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro"
                android:textSize="10pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matricula" />

                <EditText
                    android:id="@+id/edtMatricula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" >
                    <requestFocus />
                    </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome" />

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

                 
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView 
                    android:id="@+id/textViewIdade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Idade"/>
                
                <EditText
                    android:id="@+id/editTextIdade"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funcao" />
					
                	<RadioGroup
                    android:id="@+id/radioFuncao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radioMedico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_medico" />

                    <RadioButton
                        android:id="@+id/radioPaciente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_paciente" />
                </RadioGroup>
                
<!--                 <EditText -->
<!--                     android:id="@+id/edtFuncao" -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_weight="1" -->
<!--                     android:ems="10" /> -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radioMasc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_masc" />

                    <RadioButton
                        android:id="@+id/radioFem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_fem" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rua" />

                <EditText
                    android:id="@+id/edtRua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bairro" />

                <EditText
                    android:id="@+id/edtBairro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numero" />

                <EditText
                    android:id="@+id/edtNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cidade" />

                <EditText
                    android:id="@+id/edtCidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estado" />

                <EditText
                    android:id="@+id/edtEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />
            </LinearLayout>

<!--             <LinearLayout -->
<!--                 android:layout_width="match_parent" -->
<!--                 android:layout_height="wrap_content" > -->

<!--                 <TextView -->
<!--                     android:id="@+id/textView11" -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:text="@string/administrador" /> -->

<!--                 <RadioGroup -->
<!--                     android:id="@+id/radioAdmin" -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="wrap_content" > -->

<!--                     <RadioButton -->
<!--                         android:id="@+id/radioSim" -->
<!--                         android:layout_width="wrap_content" -->
<!--                         android:layout_height="wrap_content" -->
<!--                         android:text="@string/sim" /> -->

<!--                     <RadioButton -->
<!--                         android:id="@+id/radioNao" -->
<!--                         android:layout_width="wrap_content" -->
<!--                         android:layout_height="wrap_content" -->
<!--                         android:checked="true" -->
<!--                         android:text="@string/nao" /> -->
<!--                 </RadioGroup> -->
<!--             </LinearLayout> -->
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewSenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"  >
                    <requestFocus />
                    </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_weight="8.65"
                android:gravity="center|top" >

                <Button
                    android:id="@+id/btnCadastrarUusuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastrar" />

<!--                 <Button -->
<!--                     android:id="@+id/btnCancelar" -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:text="@string/cancelar" /> -->
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>